force-app/main/default/objects/EI_SA_CONTERM__c/EI_SA_CONTERM__c.object-meta.xml
<CustomObject>
    <description>SA level rate contract riders for codes such as EMP-DSC.</description>
    <label>EI SA CONTERM</label>
    <nameField>
        <displayFormat>SACONT{0000000000}</displayFormat>
        <label>Sequence No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EI SA CONTERM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>