force-app/main/default/objects/EI_SA_CONTERM__c/fields/BF_CD__c.field-meta.xml
<CustomField>
    <fullName>BF_CD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BF CD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>