force-app/main/default/objects/EI_SA_CONTERM__c/fields/CONTERM_TYPE_FLG__c.field-meta.xml
<CustomField>
    <fullName>CONTERM_TYPE_FLG__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CONTERM TYPE FLG</label>
    <length>10</length>
    <type>Text</type>
</CustomField>