force-app/main/default/objects/EI_SA_CONTERM__c/fields/END_DT__c.field-meta.xml
<CustomField>
    <fullName>END_DT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>END DT</label>
    <type>Date</type>
</CustomField>