force-app/main/default/objects/EI_SA_CONTERM__c/fields/EXTERNAL_ID__c.field-meta.xml
<CustomField>
    <fullName>EXTERNAL_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>EXTERNAL ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>