force-app/main/default/objects/EI_SA_CONTERM__c/fields/SERVICE_AGREEMENT__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_AGREEMENT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SERVICE AGREEMENT</label>
    <referenceTo>EI_Site__c</referenceTo>
    <relationshipLabel>EI SA CONTERM</relationshipLabel>
    <relationshipName>EI_SA_CONTERM</relationshipName>
    <type>Lookup</type>
</CustomField>