force-app/main/default/objects/EI_SA_CONTERM__c/fields/START_DT__c.field-meta.xml
<CustomField>
    <fullName>START_DT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>START DT</label>
    <required>true</required>
    <type>Date</type>
</CustomField>