force-app/main/default/objects/EI_SA_CONTERM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SA_ID__c</columns>
    <columns>BF_CD__c</columns>
    <columns>CONTERM_TYPE_FLG__c</columns>
    <columns>START_DT__c</columns>
    <columns>END_DT__c</columns>
    <columns>SERVICE_AGREEMENT__c</columns>
    <columns>EXTERNAL_ID__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>